# aisw-capstone25-capstone25-synergy

./: README.md
003 Code/: README.md  pyproject.toml  whisper_web_ui.py
003 Code/config/: config_whisper.json
003 Code/doc/: system_overview.md
003 Code/src_B/: README.md  __init__.py  main.py  terminal_interface.py
003 Code/src_B/api/: app.py  routes.py  state.py  websocket.py
003 Code/src_B/config/: config.py
003 Code/src_B/diarization/: constants.py  service.py  speaker_handler.py
003 Code/src_B/evaluation/: evaluator.py  helpers.py
003 Code/src_B/models/: data_models.py  ml_models.py
003 Code/src_B/reports/: __init__.py  constants.py  manager.py  pdf_generator.py  summarizer.py
003 Code/src_B/transcription/: service.py  speaker_handler.py
003 Code/src_B/utils/: audio.py  timeline.py
003 Code/src_F/: package-lock.json  package.json  vite.config.ts
003 Code/src_F/src/: main.tsx  types.ts
003 Code/src_F/src/components/: RealtimeSpeech.tsx  Statistics.tsx  TimelineVisualization.tsx
003 Code/src_F/src/pages/: Setup.tsx
003 Code/src_F/src/services/: api.ts  websocket.ts
